fix headers and margin on mobile

--- a/assets/site.scss
+++ b/assets/site.scss
@@ -29,7 +29,7 @@ header {
     margin-right: 20px;
   }
 
-  .actual-content {
+  .actual-content, .projects {
     margin-left: 20px;
     margin-right: 20px;
   }
@@ -77,6 +77,7 @@ article {
 
 #footer {
   margin: 0;
+  margin-top: 30px;
   padding: 30px;
 }
 
